[backend] Clean code